# fpga_vdf_discriminant

./: .cproject  .gitignore  .project  CMakeLists.txt  Utils.cpp  Utils.h  VDFTypes.cpp  VDFTypes.h  fpga_vdf_discriminant-tb.cpp  fpga_vdf_discriminant.cpp  fpga_vdf_discriminant.h  hls.app
.apc/: autopilot.apfmapping
cmake/: FindFLINT.cmake  FindGMP.cmake  FindGMPXX.cmake  FindMPFR.cmake
solution1/: script.tcl  solution1.aps
solution1/.autopilot/: .autopilot_exit
solution1/.autopilot/db/: .message_csim.xml
